--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -64,7 +64,7 @@ jobs:
       - uses: actions/cache@v2
         id: osxcross-cache
         with:
-          key: ${{ env.OSXCROSS_REVISION }}-${{ XCODE_VERSION }}
+          key: ${{ env.OSXCROSS_REVISION }}-${{ env.XCODE_VERSION }}
           path: /opt/osxcross/target
       - name: Build osxcross
         if: steps.osxcross-cache.outputs.cache-hit != 'true'
