--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -73,7 +73,7 @@ jobs:
           sudo mv osxcross-${OSXCROSS_REVISION} /opt/osxcross
           cd /opt/osxcross
           XCODEDIR=/Applications/Xcode_${XCODE_VERSION}.app tools/gen_sdk_package.sh && mv MacOSX*.sdk.tar.xz tarballs/
-          ./build.sh
+          UNATTENDED=1 ./build.sh
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
