--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -95,7 +95,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.0'
+          # Ruby >= 3.0 isn't usable now because Rakefile in mruby v2.0.1 has kwargs problem.
+          # https://github.com/mruby/mruby/blob/2.0.1/Rakefile#L37
+          ruby-version: '2.7'
           bundler-cache: true
       - name: Build mitamae
         run: |
