--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -77,6 +77,7 @@ jobs:
           pushd osxcross
           XCODEDIR=/Applications/Xcode_${XCODE_VERSION}.app tools/gen_sdk_package.sh && mv MacOSX${MACOS_SDK_VERSION}.sdk.tar.xz tarballs/
           popd
+          ls -l osxcross/tarballs || true
 
   osxcross:
     name: Build osxcross
@@ -100,6 +101,8 @@ jobs:
       - name: Build osxcross
         if: steps.osxcross-cache.outputs.cache-hit != 'true'
         run: |
+          ls -l osxcross/target || true
+          ls -l osxcross/tarballs || true
           pushd osxcross
           UNATTENDED=1 ./build.sh
           popd
