--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/cache@v2
         id: macos-sdk-cache
         with:
-          key: macos-sdk-${{ env.OSXCROSS_REVISION }}-${{ env.XCODE_VERSION }}
+          key: macos-sdk-${{ env.OSXCROSS_REVISION }}-${{ env.XCODE_VERSION }}-v1
           path: osxcross/tarballs/MacOSX${{ env.MACOS_SDK_VERSION }}.sdk.tar.xz
       - name: Package MacOSX SDK
         if: steps.macos-sdk-cache.outputs.cache-hit != 'true'
@@ -33,7 +33,9 @@ jobs:
           curl -sSLf https://github.com/tpoechtrager/osxcross/archive/${OSXCROSS_REVISION}.tar.gz | tar zxf -
           mv osxcross-${OSXCROSS_REVISION} osxcross
           pushd osxcross
-          XCODEDIR=/Applications/Xcode_${XCODE_VERSION}.app tools/gen_sdk_package.sh && mv MacOSX${MACOS_SDK_VERSION}.sdk.tar.xz tarballs/
+          XCODEDIR=/Applications/Xcode_${XCODE_VERSION}.app tools/gen_sdk_package.sh
+          mv MacOSX${MACOS_SDK_VERSION}.sdk.tar.xz tarballs/
+          tar tf tarballs/MacOSX${MACOS_SDK_VERSION}.sdk.tar.xz | sort | sha256sum
           popd
           ls -l osxcross/tarballs || true
 
@@ -49,12 +51,12 @@ jobs:
           mv osxcross-${OSXCROSS_REVISION} osxcross
       - uses: actions/cache@v2
         with:
-          key: macos-sdk-${{ env.OSXCROSS_REVISION }}-${{ env.XCODE_VERSION }}
+          key: macos-sdk-${{ env.OSXCROSS_REVISION }}-${{ env.XCODE_VERSION }}-v1
           path: osxcross/tarballs/MacOSX${{ env.MACOS_SDK_VERSION }}.sdk.tar.xz
       - uses: actions/cache@v2
         id: osxcross-cache
         with:
-          key: osxcross-${{ runner.os }}-${{ env.OSXCROSS_REVISION }}-${{ env.XCODE_VERSION }}
+          key: osxcross-${{ runner.os }}-${{ env.OSXCROSS_REVISION }}-${{ env.XCODE_VERSION }}-v1
           path: osxcross/target
       - name: Build osxcross
         if: steps.osxcross-cache.outputs.cache-hit != 'true'
@@ -62,7 +64,9 @@ jobs:
           ls -l osxcross/target || true
           ls -l osxcross/tarballs || true
           pushd osxcross
+          tar tf tarballs/MacOSX${MACOS_SDK_VERSION}.sdk.tar.xz | sort | sha256sum
           UNATTENDED=1 ./build.sh
+          find target | sort | sha256sum
           popd
 
   build-aarch64-darwin:
@@ -81,10 +85,12 @@ jobs:
       - uses: actions/cache@v2
         id: osxcross-cache
         with:
-          key: osxcross-${{ runner.os }}-${{ env.OSXCROSS_REVISION }}-${{ env.XCODE_VERSION }}
+          key: osxcross-${{ runner.os }}-${{ env.OSXCROSS_REVISION }}-${{ env.XCODE_VERSION }}-v1
           path: osxcross/target
       - name: Build mitamae
         run: |
+          ls -l osxcross/target || true
+          (cd osxcross; find target | sort | sha256sum)
           export PATH="$PWD/osxcross/target/bin:$PATH"
           bundle exec rake compile BUILD_TARGET=darwin-aarch64
           mkdir -p mitamae-build
